--- a/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
@@ -55,6 +55,15 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'ci|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\ci\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BBC.Dna.SocialAPI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c2c5f2d0ba0d9887, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
