--- a/Main/Source/Shared/Microsoft.ServiceModel.Web/Microsoft.ServiceModel.Web.csproj
+++ b/Main/Source/Shared/Microsoft.ServiceModel.Web/Microsoft.ServiceModel.Web.csproj
@@ -45,6 +45,14 @@
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
     <Optimize>true</Optimize>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'ci'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\ci\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <HintPath>c:\dd\CDFRestwork\public\sdk\ref\v2.0\..\..\..\internal\sdk\ref\WinFX\v3.5\System.Core.dll</HintPath>
