--- a/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
@@ -65,10 +65,6 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BBC.Dna.SocialAPI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c2c5f2d0ba0d9887, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BBC.Dna.SocialAPI\bin\Debug\BBC.Dna.SocialAPI.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Caching.dll</HintPath>
@@ -199,6 +195,10 @@
     <ProjectReference Include="..\BBC.Dna.Sites\BBC.Dna.Sites.csproj">
       <Project>{2CE05465-9B21-4CD9-A592-FABD2AD051B3}</Project>
       <Name>BBC.Dna.Sites</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BBC.Dna.SocialAPI\BBC.Dna.SocialAPI.csproj">
+      <Project>{bd150cef-5f42-4c4d-aa7d-c7760977dd4d}</Project>
+      <Name>BBC.Dna.SocialAPI</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Users\BBC.Dna.Users.csproj">
       <Project>{19609A9E-E93A-4106-8529-F3A6C7DE9BF7}</Project>
