--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -392,9 +392,7 @@
     <Compile Include="NewUsers.aspx.designer.cs">
       <DependentUpon>NewUsers.aspx</DependentUpon>
     </Compile>
-    <Compile Include="App_Code\ActionlessForm.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
+    <Content Include="App_Code\ActionlessForm.cs" />
     <Compile Include="ArticleDiagnosticPage.aspx.cs">
       <DependentUpon>ArticleDiagnosticPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
