Updated ModerationItem (contract) to allow for BBCUserIdentity to be passed: MYMODCOMM-1238

--- a/Main/packages/repositories.config
+++ b/Main/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Source\Shared\BBC.Dna.Moderation\packages.config" />
   <repository path="..\Tests\Acceptance Tests\Comments.AcceptanceTests\packages.config" />
+  <repository path="..\Tests\FunctionalTests.Services.Moderation\packages.config" />
 </repositories>
